src/deploy/resources/base/ingress-nginx/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - "PLACEHOLDER"
  rules:
    - host: "PLACEHOLDER"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-review-service
                port:
                  number: 80
